# cmakekate

./: CMakeLists.txt  README
lib/: cmakeclient.cpp  cmakeclient.h  debugwidget.cpp  debugwidget.h  projectmodel.cpp  projectmodel.h  utility.h
plugin/: cmakekateplugin.cpp  cmakekateplugin.desktop  cmakekateplugin.h  cmakekatewindowintegration.cpp  cmakekatewindowintegration.h  plugin.qrc  ui.rc
